# Reversi-ServerCode

./: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  CloseCommand.cpp  CloseCommand.h  Command.h  CommandsManager.cpp  CommandsManager.h  GameDetails.cpp  GameDetails.h  GameManager.cpp  GameManager.h  GetGamesListCommand.cpp  GetGamesListCommand.h  JoinGameCommand.cpp  JoinGameCommand.h  ListOfGames.cpp  ListOfGames.h  PlayCommand.cpp  PlayCommand.h  Server.cpp  Server.h  StartGameCommand.cpp  StartGameCommand.h  main.cpp  makefile
include/: ClientHandler.h  GameDetails.h  GetGamesListCommand.h  JoinGameCommand.h  ListOfGames.h  Server.h  Task.h  ThreadPool.h
src/: ClientHandler.cpp  CommandsManager.cpp  GameDetails.cpp  GameManager.cpp  GetGamesListCommand.cpp  JoinGameCommand.cpp  ListOfGames.cpp  Server.cpp  StartGameCommand.cpp  ThreadPool.cpp  main.cpp
